[package]
name = "fake-actor"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fake_actor"

[dependencies]
async-trait = "0.1"
form_urlencoded = "1.0"
futures = "0.3"
rust-embed = "6.3.0"
serde_bytes = "0.11"
serde_json ="1.0"
serde = {version = "1.0", features = ["derive"]}

wasmbus-rpc = "0.10.1"

wasmcloud-interface-httpserver = "0.7.0"
#wasmcloud-interface-factorial = "0.7"
wasmcloud-interface-keyvalue = "0.8.0"
wasmcloud-interface-logging = "0.7.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
